--- a/les-6.2/css/style.css
+++ b/les-6.2/css/style.css
@@ -53,7 +53,7 @@ table {
 
 .header {
     height: 800px;
-    background: url("../image/bg.png") no-repeat center/cover;
+    background: url("../image/HERO IMG.png") no-repeat center/cover;
 }
 
 .header__top {
