--- a/v3/1-html/les-4/hw/t-2/style.css
+++ b/v3/1-html/les-4/hw/t-2/style.css
@@ -61,6 +61,10 @@
         height: 100px;
     }
 
+    .container, .b-box, .left-box{
+        width: 300px;
+    }
+
     .box {
         width: 100px;
     }
