--- a/v3/1-html/les-4/add/t-2/media.css
+++ b/v3/1-html/les-4/add/t-2/media.css
@@ -1,9 +1,6 @@
-@media screen and (min-width: 0px) and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     .gap10 {
         gap: 5px;
-    }
-    .container {
-        width: 500px;
     }
 
     .header {
