--- a/v3/1-html/les-4/add/t-2/style.css
+++ b/v3/1-html/les-4/add/t-2/style.css
@@ -17,7 +17,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 800px;
+    width: 80%;
     height: auto;
     margin: 0 auto;
 }
